# template-python

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  pytest.ini
{{cookiecutter.package_name}}/mkdocs/: mkdocs.yml
{{cookiecutter.package_name}}/mkdocs/docs/: api-overview.md  contributing.md
{{cookiecutter.project_name}}/: .isort.cfg  CHANGELOG.md  Makefile  scent.py
{{cookiecutter.project_name}}/tests/: test_version.py
{{cookiecutter.project_slug}}/: .cookiecutter.yaml  .pre-commit-config.yaml  .travis.yml  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/sphinx/: api.rst  conf.py  contributing.md  documentation.md  license.rst
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
