[tool.poetry]

name = "template-python"
version = "1.0.1"
description = "A template for Python libraries."
authors = ["Jerome Guibert <jguibert@gmail.com>"]


[tool.poetry.dependencies]

python= "^3"

cookiecutter = "*"

[tool.poetry.dev-dependencies]

sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
